# django_webpage

./: Makefile  manage.py  pyproject.toml  pytest.ini
.direnv/python-3.11.2/: pyvenv.cfg
src/: db.sqlite3
src/static/: Login_style.css
src/templates/: messages.html
src/templates/registration/: login.html
src/website/: db.sqlite3
src/website/config/: asgi.py  environ.py  settings.py  urls.py  wsgi.py
src/website/register/: forms.py  views.py
src/website/static/: Messages_Style.css  Navbar_style.css  Reset_Password_style.css  Signup_style.css
src/website/templates/: home.html  messages.html  reset_password.html
src/website/templates/registration/: login.html  signup.html
tests/: confest.py
tests/unit/: test_user_create.py
website/: Makefile  db.sqlite3
website/register/templates/: base.html
website/static/: Footer_style.css  Home_style.css  Login_style.css  Navbar_style.css  Signup_style.css
website/templates/: base.html  home.html  navbar_logged_in.html  navbar_logged_out.html  signup.html
website/templates/registration/: login.html
website/website/: db.sqlite3  settings.py  urls.py
website/website/config/: asgi.py  settings.py  urls.py  wsgi.py
website/website/register/: forms.py  middleware.py  views.py
