[tool.poetry]
name = "django-webpage"
version = "0.1.0"
description = ""
authors = ["TaleeBarbieri <talee.alexei@hotmail.com>"]
packages = [
    {include = "website", from="src"},
]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.2"
pysqlite3 = "^0.5.1"
django-bootstrap-v5 = "^1.0.11"
django-google-translate = "^1.1"
pytest = "^7.4.0"
pytest-django = "^4.5.2"
django-environ = "^0.10.0"




[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
